gitops/overlays/garu-home/hass/k8s.external-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: hass
  namespace: hass
  labels:
    app: hass
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
---
kind: Endpoints
apiVersion: v1
metadata:
  name: hass
  namespace: hass
  labels:
    kubernetes.io/service-name: hass
    app: hass
subsets:
  - addresses:
      - ip: 192.168.1.4
    ports:
      - port: 8123
        name: http
---
