gitops/overlays/garu-home/hass/k8s.ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-iot-garu-me
  namespace: hass
spec:
  hostnames:
    - iot.garu.me
  parentRefs:
    - name: garu-me
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: hass
          port: 8123
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-iot-garu-me-http
  namespace: hass
spec:
  hostnames:
    - iot.garu.me
  parentRefs:
    - name: garu-me
      namespace: traefik
      sectionName: web
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 308
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
